                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 23-07-2006 changed: cleanup and simplification of renderer and field rendering. 
                       combined async rendering of dvdplayer and mplayer
                       changed texture memory to not be write combined, allows fast reads
 - 23-07-2006 changed: stacking of files was case sensitive on filenames before, now it's case insensitive
 - 23-07-2006 changed: made seamless stacking quicker to startup with mplayer by not initing codecs or audio/video outputs and disabled caching of subtitles
 - 20-07-2006 fixed: Internet not connected message even if connected. (added return code 200)
 - 19-07-2006 fixed: [ 1524849 ] Screensaver unhiding on next song play
 - 19-07-2006 changed: removed DCHP IP from SystemInfo, and some other little changes
 - 19-07-2006 changed: improved the profiles support somewhat. xbmc is now fully multiuser capable. http://www.xbmc.xbox-scene.com/wiki/index.php?title=Profiles. thanks to bpairs, jezz_x, chokeman and smokehead for skin work. known issue: webserver sometimes misbehaves on login/logout.
 - 19-07-2006 fixed: since xbms and ccx can be case sensitive, we have to try some more common subtitle subdirs.
 - 18-07-2006 added: 'go to root' in context menu of media windows.
 - 18-07-2006 fixed: [ 1523588 ] get thumbs from imdb or local drive
 - 18-07-2006 added: option to hide 'all' items in library views.
 - 18-07-2006 fixed: python scripts custom thumbs were not being used. 
 - 16-07-2006 added: <thumb> and <label> in .cut files.
 - 16-07-2006 added: existence for python libraries, python will now refuse to start and gives an error if libraries are missing