@@ -3,11 +3,16 @@
 #include "ICodec.h"
 #include "ringholdbuffer.h"
 
+#define USE_FLOAT_BUFFERS 1
+
 #define PACKET_SIZE 3840    // audio packet size - we keep 1 in reserve for gapless playback
                             // using a multiple of 1, 2, 3, 4, 5, 6 to guarantee track alignment
                             // note that 7 or higher channels won't work too well.
 
 #define INPUT_SIZE PACKET_SIZE * 2  // input data size we read from the codecs at a time
+
+#define OUTPUT_SAMPLES PACKET_SIZE / 2  // max number of output samples
+#define INPUT_SAMPLES  PACKET_SIZE      // number of input samples (distributed over channels)
 
 #define STATUS_NO_FILE  0
 #define STATUS_QUEUING  1
@@ -30,7 +35,11 @@ public:
   bool Create(const CFileItem &file, __int64 seekOffset, unsigned int nBufferSize);
   void Destroy();
 
+#ifdef USE_FLOAT_BUFFERS
+  int ReadSamples(int numsamples);
+#else
   int ReadData(int size);
+#endif
 
   bool CanSeek() { if (m_codec) return m_codec->CanSeek(); else return false; };
   __int64 Seek(__int64 time);
@@ -48,7 +57,12 @@ public:
   ICodec *GetCodec() { return m_codec; }
 
 private:
+#ifdef USE_FLOAT_BUFFERS
+  void ProcessAudio(float *data, int numsamples);
+  int ReadPCMSamples(float *buffer, int numsamples, int *actualsamples);
+#else
   void ProcessAudio(void *data, int size);
+#endif
   float GetReplayGain();
 
   // block size (number of bytes per sample * number of channels)
@@ -57,7 +71,12 @@ private:
   CRingHoldBuffer m_pcmBuffer;
 
   // output buffer (for transferring data from the Pcm Buffer to the rest of the audio chain)
+#ifdef USE_FLOAT_BUFFERS
+  float m_outputBuffer[OUTPUT_SAMPLES];
+#else
   BYTE m_outputBuffer[PACKET_SIZE];
+#endif
+
   unsigned int m_outputBufferSize;    // generally zero unless we feed data in
                                       // for gapless playback purposes, as the
                                       // rest of the audio chain takes data
@@ -65,7 +84,12 @@ private:
                                       // left over to prefix to the next track.
 
   // input buffer (for transferring data from the Codecs to our Pcm Ringbuffer
+#ifdef USE_FLOAT_BUFFERS
+  BYTE m_pcmInputBuffer[INPUT_SIZE];
+  float m_inputBuffer[INPUT_SAMPLES];
+#else
   BYTE m_inputBuffer[INPUT_SIZE];
+#endif
 
   // status
   bool    m_eof;
